# sBlot

./: .gitignore  README.md  pyproject.toml  run.py
config/: config_io.py
core/: render.py  transforms.py  utils.py
docs/: Sblot Documentation.md  index.md  installation.md  interactive.md  quickstart.md
docs/configuration/: config_plot.md  config_style.md
docs/plots/: loo.md  map.md  overview.md  pies.md  preferences.md  weights.md
interactive/: app.py  app_state.py  components.py  plotting.py
sblot/: align_clusters_across_logs.py  run.py
sblot/config/: config_io.py
sblot/core/: render.py  transforms.py  utils.py
sblot/data/example_configs/: config_plot.yaml  config_style.yaml
sblot/interactive/: app.py  app_state.py  components.py  plotting.py  styles.py
sblot/plots/: loo.py  map.py  pies.py  preferences.py  weights.py
test/manual/: config_plot.yaml  config_style.yaml  test_plotting.ipynb
tests/: test_config.py  test_pipeline.py
tests/data/: config_plot.yaml  config_style.yaml
tests/generate_data/: config.yaml  config_simulate.yaml  generate_test_data.py
tests/manual/: config_plot.yaml  config_style.yaml  test_plotting.ipynb
