[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sblot"
version = "1.0.0"
description = "Python library for visualization of sBayes results."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Nico Neureiter", email = "nico.neureiter@gmail.com"},
    {name = "Peter Ranacher", email = "peter.ranacher@gmail.com"},
    {name = "Anjing Zhang"},
]
keywords = ["clustering", "confounders", "language areas", "contact tracing"]
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "antimeridian",
    "geopandas",
    "matplotlib",
    "numpy",
    "pandas",
    "pydantic>=2",
    "pyproj",
    "ruamel.yaml",
    "sbayes",
    "scipy",
    "seaborn",
    "shapely",
    "typing_extensions",
    "Unidecode",
    "webcolors",
]

[project.optional-dependencies]
interactive = [
    "dash",
    "dash-extensions",
    "dash-daq",
    "plotly",
]
loo = [
    "arviz",
    "tables",
]
all = [
    "sblot[interactive,loo]",
]

[project.urls]
Homepage = "https://github.com/derpetermann/sBlot"

[project.scripts]
sblot = "sblot.run:cli"
sblot-interactive = "sblot.interactive.app:cli"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "test*"]

[tool.setuptools.package-data]
"sblot.data.map" = ["*.geojson"]
"sblot.data.example_configs" = ["*.yaml"]